@@ -1,7 +1,7 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.13.0
+Version: 1.13.4
 Date: 2016-03-31
 Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, and Meghan Short
 Maintainer: Habil Zare <zare@u.washington.edu>
